spec/e2e/variable/use_this_as_var.lit
# error: [line 2] Error at "self": I was expecting a variable name here.
var self = "value";
